# lido-oracle

./: .commit-template.txt  .dockerignore  .env.debug  .env.example  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .hadolint.yaml    .pre-commit-config.yaml  010-pin-cids.sh  CHANGELOG.md  Dockerfile  Dockerfile.base  Dockerfile.kubo  Lido-0.2.1-py3-none-any.whl  Makefile  README.md  agents.md  beacon.py  build.sh  build_and_push.sh  check_code.sh  check_deterministic_build.py  contracts.py  count_referrals.py  docker-compose.devnet.yml  docker-compose.testnet.yml  docker-compose.yml  entrypoint.sh  oracle.py  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.sh
.git-hooks/: validate-commit-msg.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dispatch_workflow.py
.github/instructions/: documentation.instructions.md  oracle-logic.instructions.md  python-quality.instructions.md  security.instructions.md  testing.instructions.md
.github/workflows/: build-image.yml  checks.yml  ci-daily-checks.yml  ci-dev-goerli.yml  ci-dev-holesky.yml  ci-dev.yml  ci-prod.yml  ci-staging.yml  create-tag-and-trigger-deploy.yml  docker_build_reproducibility.yml  fork_tests.yml  linters.yml  mainnet_fork_tests.yml  prepare-release.yml  tests.yml  tests_and_checks.yml
app/: beacon.py  contracts.py  exceptions.py  interactive_prompt.py  log.py  metrics.py  oracle.py  pool_metrics.py  prometheus_metrics.py  state_proof.py
assets/: Accounting.json  AccountingOracle.json  Burner.json  CSAccounting.json  CSFeeDistributor.json  CSFeeOracle.json  CSModule.json  CSParametersRegistry.json  CSStrikes.json  CuratedStakingModule.json  DataBus.json  DePool.json  DePoolOracle.json  DelegationContract.json  HashConsensus.json  IDePool.json  IDePoolOracle.json  IStakingModule.json  LazyOracle.json  Lido.json  LidoLocator.json  LidoOracle.json  MetaRegistry.json  NodeOperatorRegistry.json  NodeOperatorsRegistry.json  OracleDaemonConfig.json  OracleReportSanityChecker.json  Pool.json  StableSwapPool.json  StableSwapStateOracle.json  StakingProvidersRegistry.json  StakingRouter.json  StakingRouterV1.json  StakingRouterV2.json  StakingVault.json  ValidatorExitBus.json  ValidatorsExitBusOracle.json  VaultHub.json  WithdrawalQueueERC721.json
docs/: alerts.md  cl-rebase.md  delegation.md  development.md  glamsterdam-devnet-testplan.md  kubo.md  oracle-eval-guide.md  reproducible-builds.md  testing.md
docs/monitoring/: README.md  alertmanager.yml  alerts.yml  prometheus.yml
fixtures/: contracts.v1.json
fixtures/TestGetValidatorsToEject/: test_should_not_report_on_no_withdraw_requests.json
fixtures/TestRequestedToExitIndices/: test_get_recently_requested_to_exit_indices.json
fixtures/common/: chainId.json  contracts-withdrawal.v2.json  contracts.json  contracts.v1.json
helpers/: eth_nodes_mock.py  get_git_info.py  get_top_semver_tag.py  submit_deposit.py
kubo/: 010-set-conf.sh  020-pin-cids.sh  Dockerfile  README.md  _pin-cids  docker-compose.yml  entrypoint.sh
lighthouse_version_checker/: Dockerfile  README.md  check_bot.py
old_code/: accounting.py  ejection.py  lido.py  withdrawal_queue.py
old_code/metrics/: accounting.py
scripts/: build_blst.sh  fetch_key_indices.py  init_performance_db.sh
src/: constants.py  contracts.py  main.py  oracle.py  protocol_upgrade_checker.py  runtime.py  scrap_script.py  type_aliases.py  types.py  typings.py  variables.py
src/blockchain/: __init__.py  contracts.py  frame.py  tx_execution.py
src/contract_utils/: withdrawal_queue.py
src/metrics/: healthcheck_server.py  logging.py  prometheus_metrics.py
src/modules/: accounting.py  ejection.py  interface.py  steth_price_balancer.py
src/old_oracle/: metrics.py  oracle.py  prometheus_metrics.py
src/providers/: beacon.py  consistency.py  execution.py  http_provider.py  keys_api.py  typings.py  validators.py  web3_middleware.py
src/scripts/: healthcheck.py
src/services/: bunker.py  deposit_signature_verification.py  exit_order.py  exit_order_iterator.py  exit_order_iterator_state.py  exit_order_state.py  extra_data.py  finalizer.py  lido.py  prediction.py  safe_border.py  staking_vaults.py  validator_state.py  withdrawal.py  withdrawal_safe_border.py
src/utils/: abi.py  apr.py  base64.py  block.py  blockstamp.py  build.py  cache.py  dataclass.py  deposit_signature.py  env.py  epoch.py  events.py  exception.py  freeze_decorator.py  helpers.py  input.py  jwt.py  keys.py  lazy_object_proxy.py  range.py  serializable_set.py  slot.py  time.py  timeit.py  transaction.py  types.py  units.py  validator_balance.py  validator_state.py  version.py  web3converter.py
src/web3_extentions/: __init__.py  consensus.py  contracts.py  keys_api.py  lido_validators.py  middleware.py  tx_utils.py  typings.py
src/web3_utils/: contract_frame_utils.py  tx_execution.py  typings.py  validators.py
src/web3py/: contract.py  contract_tweak.py  middleware.py  types.py  typings.py
stubs/blst/: __init__.pyi
stubs/ipld_dag_pb/: __init__.pyi
stubs/lazy_object_proxy/: __init__.pyi  lazy_object_proxy.pyi
stubs/timeout_decorator/: __init__.pyi  timeout_decorator.pyi
stubs/web3_multi_provider/: __init__.pyi  multi_http_provider.pyi
tests/: README.md  __init__.py  conftest.py  factories.py  mocks.py  patch  providers.py  providers_utils.py  responses.json  test_accounting.py  test_beacon_functions.py  test_configurations.py  test_contract_functions.py  test_count_referrals.py  test_get_semver_tag.py  test_log_version_on_oracle_start.py  test_logging_stdout_stderr.py  test_logging_tx_rcpt.py  test_logging_tx_rcpt_dump.p  test_oracle.py  test_pool_metrics.py  test_prediction.py  test_web3_utils.py  utils.py
tests/e2e/: README.md  __init__.py  chronix.config.js  chronix.py  conftest.py  fixtures.py  fork.py  gas_estimation.py  package.json  test_accounting.py  test_basic.py  test_e2e.py  test_ejector.py  test_ejector_e2e.py
tests/factory/: base.py  (+11 more)
tests_old/: test_beacon_functions.py  test_configurations.py  test_get_semver_tag.py  test_pool_metrics.py  utils.py
(+622 files in other folders)
