[tool.poetry]
name = "lido-oracle"
version = "7.1.0"
description = "Oracle daemon for the Lido decentralized staking protocol. It collects consensus-layer data — including the number of active validators and their aggregated balances — and securely reports this information to the Lido dApp smart contracts operating on the execution layer."
authors = [
    "Dmitry Chernukhin",
    "Dmitry Suldin",
    "George Avsetsin",
    "Kirill Varlamov",
    "Raman Siamionau",
    "Roman Kolpakov",
    "Sergey Ivanenko",
    "Sergey Khomutinin",
    "Smelov Vladimir",
    "Vladimir Gorkavenko",
    "Yuri Tkachenko",
]
license = "GPL 3.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
prometheus-client = "^0.21.1"
timeout-decorator = "^0.5.0"
pytest = "^9.0.2"
pytest-xdist = "^3.8.0"
more-itertools = "^10.1.0"
web3 = "^7.8.0"
web3-multi-provider = { version = "^2.2.7", extras = ["metrics"] }
json-stream = "^2.3.2"
json-stream-rs-tokenizer = {version = "^0.5.0", python = ">=3.14,<3.15"}  # Python 3.14 support
oz-merkle-tree = { git = "https://github.com/lidofinance/oz-merkle-tree", rev = "f4ad6e006b8daf05ce2ce255e123eb9f923d8ef8" }
multiformats = "^0.3.1"
protobuf="^6.31.1"
dag-cbor="^0.3.3"
ipld-dag-pb = "^0.0.1"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
gunicorn = "^21.2.0"
sqlmodel = "^0.0.27"
psycopg2-binary = "^2.9.11"
prometheus-fastapi-instrumentator = "^7.1.0"
ssz = "^0.5.2"

[tool.poetry.group.dev.dependencies]
faker = "^37.3.0"
base58 = "^2.1.1"
ipfshttpclient = "^0.7.0"
pydantic = "^2.4.0"
pytest-cov = "^7.0.0"
polyfactory = "^3.2.0"
# {{{ type stubs
types-requests = "^2.28.11.15"
types-setuptools = "^67.6.0.0"
types-urllib3 = "^1.26.25.8"
types-protobuf = "^6.30.2"
# }}}
hypothesis = "^6.68.2"
ruff = "^0.14.0"
pyright = "^1.1.390"
responses = "^0.25.7"
eth-tester = {version = "^0.13.0b1", extras = ["py-evm"]}
pre-commit = "3.8"
ipython = "^9.0"
conventional-pre-commit = "^4.0.0"
types-gunicorn = "^23.0.0.20251031"
mutmut = "^2.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: tests using mocks without external requests",
    "integration: tests involving external providers",
    "mainnet: integration tests reliant on the mainnet",
    "testnet: integration tests reliant on the testnet",
    "fork: integration tests using a forked Ethereum network",
]
addopts = "-s -vv --strict-markers"

[tool.coverage.run]
branch = true

[tool.pylint.master]
ignore-patterns = ".*_pb2\\.py"
generated-members = "unixfs_pb2.Data,merkledag_pb2.PBNode"

[tool.pylint."messages control"]
disable = [
    # Disabled by default
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    # Disabled by us
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "invalid-name",
    "unused-argument",
    "wrong-import-order",
    "ungrouped-imports",
    "line-too-long",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "unspecified-encoding",
    "bare-except",
    "fixme",
    "cell-var-from-loop",
    "invalid-envvar-default",
    "global-statement",
    "redefined-outer-name",
    "too-many-positional-arguments",
]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
stubPath = "stubs"
exclude = [
    "**/__pycache__",
    ".git",
    ".venv",
    "venv",
    "build",
    "dist"
]
ignore = [
    "src/web3py/contract_tweak.py",  # skipped because of extensive copy-paste from the upstream
    "src/utils/car/schemes/unixfs_pb2.py"  # generated protobuf file
]

[tool.ruff]
line-length = 120
target-version = "py314"

# Exclude directories and protobuf generated files
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "*_pb2.py",  # Protobuf generated files
]

[tool.ruff.lint]
extend-select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # complexity
    "C90",
]

# Note: CI is configured to only check changed files in PRs
# See .github/workflows/tests.yml for implementation
# Pre-commit hooks will enforce these rules on all staged files

[tool.ruff.format]
# Equivalent to black's skip-string-normalization = true
quote-style = "preserve"
# Match black's behavior
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
# Equivalent to isort's profile = "black" and combine_as_imports = true
combine-as-imports = true
lines-after-imports = 2

[tool.mutmut]
paths_to_mutate = "src/"
backup = false
runner = "pytest -x -m unit -q"
tests_dir = "tests/"
